fixes spacing around main action button

--- a/src_app/style/context-action-bar.sass
+++ b/src_app/style/context-action-bar.sass
@@ -42,5 +42,5 @@ context-action-bar
       background-color: $primary-color
 
   .main-button-space
-    flex-grow: 1
+    width: 4rem
 
